resources/css/style.css
html {
  font-size: 16px;
  overflow: hidden;
  height: 100%;
}

body {
  font-family: 'Open Sans', sans-serif;
  background-color: #004780;
  height: 100%;
  overflow: auto;
}

*:focus {
  outline: none;
}

* {
  user-select: none;
}

strong {
  font-weight: bold;
}

a { text-decoration: none; color: inherit; }
a:visted { text-decoration: none; }
a:hover { cursor: pointer; }

button:hover {
  cursor: pointer;
}

button:disabled {
  cursor: not-allowed;
  color: gray;
}

/* Flex Styles */
.flex { display: flex; }
.fd-col { flex-direction: column; }
.fd-rr { flex-direction: row-reverse; }
.ai-c { align-items: center; }
.jc-c { justify-content: center; }
.jc-sb { justify-content: space-between; }

/* Introduction Card Styling */
.introduction {
  font-size: .75rem;
  line-height: 1.2rem;
}

.introduction .title {
  font-weight: bold;
  font-size: 1.5rem;
  margin-bottom: .5rem;
}

.introduction .author {
  font-size: .75rem;
  color: gray;
  margin-bottom: .5rem;
}

.introduction .description {
  margin-bottom: .5rem;
}

.introduction .needs {
  margin-bottom: .5rem;
}

/* Instructions Styling */
.instructions {
  font-size: .75rem;
  line-height: 1.2rem;
}

.instructions .title {
  font-size: 1.25rem;
  font-weight: bold;
  margin-bottom: .5rem;
}

.instructions .description {
  margin-bottom: .5rem;
}

.instructions .options {
  margin-bottom: .5rem;
}

/* Question Styling */
.test-container {
  padding: 1rem;
  max-width: 30rem;
  margin: 0 auto 4rem auto;
}

.card {
  background-color: white;
  padding: 1rem;
  max-width: 30rem;
  margin-bottom: 1rem;
  border-radius: .5rem;
  transition: 250ms ease all;
}

.question:last-child {
  margin: 0 auto;
}

.question-title {
  font-weight: bold;
  line-height: 1.5;
}

.question-options {
  margin-top: .5rem;
}

.question-options .option {
  margin-bottom: .5rem;
}

.question-options input, .question-options label {
  cursor: pointer;
}

.question-options .option:last-child {
  margin-bottom: 0rem;
}

.question.answered {
  background-color: #e2f9e2;
  transition: 500ms ease all;
}

.clear-answers {
  min-width: 7rem;
}

.clear-answers button {
  background-color: lightgray;
}

.shadow {
  box-shadow: 0px 3px 5px rgba(0, 0, 0, .25);
}

button.big-button {
  font-family: 'Open Sans', sans-serif;
  font-size: 1rem;
  font-weight: bold;
  padding: 1rem;
  border-radius: .5rem;
  border: 1px solid black;
}

button.big-button:active {
  background-color: #f1f1f1;
}

button.small-button {
  font-family: 'Open Sans', sans-serif;
  font-size: .75rem;
  font-weight: bold;
  padding: .75rem;
  border-radius: .5rem;
  border: none;
  background-color: lightgray;
}

button.small-button:active {
  background-color: #f1f1f1;
}

/* Popup Styling */
.popup-container {
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  background-color: rgba(0, 0, 0, 0.5);
  height: 100%;
  width: 100%;
}

.popup {
  background-color: white;
  width: 20rem;
  padding: 2rem 2rem;
  box-sizing: border-box;
  border-radius: .5rem;
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.popup .button-container .cancel {
  margin-right: .5rem;
}

.popup .button-container .confirm {
  background-color: #004780;
  color: white;
}

.popup-message {
  line-height: 1.2rem;
  margin-bottom: 1rem;
}

.popup-message .title {
  font-weight: bold;
  font-size: 1.2rem;
  margin-bottom: 1rem;
  display: block;
}

.popup-message .body {
  font-size: .75rem;
}

.no-scroll {
  overflow: hidden;
}

/* Progress Bar Styling */
.progress-container {
  height: 4rem;
  width: 100%;
  background-color: white;
  position: fixed;
  bottom: 0;
  padding: .5rem;
  box-sizing: border-box;
  margin: 0 auto;
  left: 50%;
  transform: translateX(-50%);
}

.progress-bar {
  height: 1rem;
  width: 15rem;
  background-color: lightgray;
  border-radius: 1rem;
  overflow: hidden;
  margin: 0 1rem;
}

.progress-bar .complete {
  height: 100%;
  width: 0;
  background-color: green;
}

.progress-container .percentage {
  font-weight: bold;
  color: lightgray;
  text-align: center;
  width: 5rem;
}

.progress-container .width-container {
  max-width: 30rem;
  width: 100%;
}

button.results {
  background-color: green;
  color: white;
  margin-left: .5rem;
}

button.results:active {
  background-color: #4caf50;
}

/* Results Styling */
.results-container {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: #004780;
  padding: 1rem;
  box-sizing: border-box;
}

.results-container .results {
  padding: 1rem;
  background-color: white;
  border: 1px solid black;
  border-radius: .5rem;
  max-width: 30rem;
  width: 100%;
}

.results .title {
  font-weight: bold;
}

.results .subtitle {
  color: gray;
  font-size: .8rem;
  margin-top: .25rem;
}

.results .need .score {
  width: 2rem;
  font-weight: bold;
}

.results .need .name {
}

.results .need {
  margin-bottom: .25rem;
}

.results .needs {
  margin-top: 1rem;
}

